:hammer: fix(Translation)

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -69,7 +69,7 @@
     "description": "Authentication test with Next Auth",
     "loading": "Loading session...",
     "notLoggedIn": "You are not logged in",
-    "signIn": "Sign in with Google",
+    "signIn": "Sign in",
     "signOut": "Sign out"
   }
 } 
