--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -49,6 +49,11 @@
     "title": "Sign in to FURIA Connect",
     "description": "Choose a login method to access the platform",
     "google": "Continue with Google",
+    "socialLogin": "Social login",
+    "emailLogin": "Email login",
+    "emailPlaceholder": "Enter your email address",
+    "emailRequired": "Email is required",
+    "continueWithEmail": "Continue with email",
     "or": "or",
     "backToHome": "Back to home page",
     "footer": "FURIA Connect - Connecting the FURIA community",
@@ -63,6 +68,15 @@
       "EmailSignin": "Error sending the login email.",
       "CredentialsSignin": "Authentication failed. Check your credentials."
     }
+  },
+  "VerifyRequest": {
+    "title": "Email Verification",
+    "description": "A verification link has been sent to your email",
+    "checkInbox": "Please check your inbox and click the link we sent to complete the login process.",
+    "checkSpam": "If you can't find the email, please check your spam folder as well.",
+    "expiration": "The verification link will expire in 1 hour.",
+    "backToLogin": "Back to login",
+    "emailSentTo": "Email sent to:"
   },
   "Auth": {
     "title": "Authentication",
