--- a/src/i18n/messages/pt-BR.json
+++ b/src/i18n/messages/pt-BR.json
@@ -243,6 +243,29 @@
       "cooldown": "É necessário aguardar 10 minutos entre alterações.",
       "emailNotEditable": "O endereço de email não pode ser alterado após o cadastro."
     },
+    "contact": {
+      "title": "Informações de Contato",
+      "description": "Adicione ou atualize suas informações para contato",
+      "name": "Nome",
+      "namePlaceholder": "Seu nome completo",
+      "email": "E-mail",
+      "emailPlaceholder": "seu@email.com",
+      "cpf": "CPF",
+      "cpfPlaceholder": "Apenas números",
+      "socialMedia": "Rede Social",
+      "socialMediaPlaceholder": "Selecione uma rede social",
+      "socialContact": "Contato da Rede Social",
+      "whatsappPlaceholder": "+55 (11) 99999-9999",
+      "telegramPlaceholder": "@usuario",
+      "discordPlaceholder": "usuariodiscord",
+      "emailContactPlaceholder": "seu@email.com",
+      "save": "Salvar Informações",
+      "saving": "Salvando...",
+      "success": "Informações salvas com sucesso",
+      "error": "Erro ao salvar informações",
+      "validation_error": "Por favor, corrija os erros de validação",
+      "cooldown": "É necessário aguardar 1 dia entre atualizações"
+    },
     "delete": {
       "title": "Excluir conta",
       "description": "Remova permanentemente sua conta e todos os dados associados a ela",
